Change the buttons from text to images in an attempt to fix layout on IE and Opera. It didn't work, as there are still spaces between panels, but maybe it can be further tweaked.

--- a/dino.css
+++ b/dino.css
@@ -164,7 +164,6 @@ body {
 	right: 3px;
 	bottom: 20px;
 	z-index: 1001;
-	font-size: small;
 	text-align: right;
 }
 
@@ -173,11 +172,7 @@ body {
 }
 
 .altTextInputButton {
-	background-color: white;
-	border: 1px blue solid;
-	color: blue;
 	padding: 2px 2px;
 	text-decoration: none;
 	vertical-align: middle;
-	margin-top: 5px;
 }
